--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <meta name="description" content="Mémorial Bateau Le Joola" />
     <meta
       name="Keywords"
-      content=" Visualisation architecturale, ArchViz, Architectur, Visualisation 3D, 3D sénégal, Architectur sénégal,"
+      content=" Visualisation architecturale, Architectur, Visualisation 3D, 3D sénégal, Architectur sénégal,"
     />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <!-- <meta
-      name="viewport"
-      content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"
-    /> -->
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -1307,14 +1303,5 @@
         }
       }, 4000);
     </script>
-
-    <!-- <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script> -->
   </body>
 </html>
