--- a/index.html
+++ b/index.html
@@ -933,6 +933,17 @@
           the_dote="Name_of_dote: Dote-27 ; Group_to_activate: Group-27 ; The_rotation: 0"
         >
         </a-plane>
+        <a-plane
+          data-clickable
+          scale="0.9 0.9 0.9"
+          opacity=".5"
+          class="Dote"
+          material="src: #Arrow-1; transparent:true"
+          position="-4.26094 -1.32154 -1.76933"
+          rotation="-78.61152836533435 109.18627518690047 160.09529415765948"
+          the_dote="Name_of_dote: Dote-28 ; Group_to_activate: Group-28 ; The_rotation: 0"
+        >
+        </a-plane>
       </a-entity>
       <!-- Group-27 -->
       <a-entity scale="0 0 0" class="groups" id="Group-27" visible="false">
@@ -945,6 +956,17 @@
           position="-2.28428 -1.32154 3.08964"
           rotation="-78.61152836533435 109.18627518690047 160.09529415765948"
           the_dote="Name_of_dote: Dote-26 ; Group_to_activate: Group-26 ; The_rotation: 0"
+        >
+        </a-plane>
+        <a-plane
+          data-clickable
+          scale="0.9 0.9 0.9"
+          opacity=".5"
+          class="Dote"
+          material="src: #Arrow-1; transparent:true"
+          position="-5.90881 -1.32154 0.33878"
+          rotation="-78.61152836533435 109.18627518690047 160.09529415765948"
+          the_dote="Name_of_dote: Dote-28 ; Group_to_activate: Group-28 ; The_rotation: 0"
         >
         </a-plane>
       </a-entity>
@@ -971,6 +993,17 @@
           position="-7.74287 -1.1567 0.31734"
           rotation="-65.60882416263543 99.0414844663141 170.68412716947225"
           the_dote="Name_of_dote: Dote-29 ; Group_to_activate: Group-29 ; The_rotation: 0"
+        >
+        </a-plane>
+        <a-plane
+          data-clickable
+          scale="0.9 0.9 0.9"
+          opacity=".5"
+          class="Dote"
+          material="src: #Arrow-1; transparent:true"
+          position="4.55494 -1.32154 1.91898"
+          rotation="-66.20412731177636 -84.56971647689977 -8.635619888211767"
+          the_dote="Name_of_dote: Dote-26 ; Group_to_activate: Group-26 ; The_rotation: 0"
         >
         </a-plane>
       </a-entity>
@@ -1242,7 +1275,7 @@
         }
       };
 
-      setStart(0);
+      setStart(24);
 
       AFRAME.registerComponent("the_dote", {
         schema: {
